CMAKE_MINIMUM_REQUIRED (VERSION 3.6)
PROJECT (2.2.1)

FIND_PACKAGE( Boost 1.67 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

# FIND_PACKAGE(Boost)
# IF (Boost_FOUND)
#     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
#     ADD_DEFINITIONS( "-DHAS_BOOST" )
# ENDIF()

ADD_EXECUTABLE(a.out main.cpp)

TARGET_LINK_LIBRARIES( a.out LINK_PUBLIC ${Boost_LIBRARIES} )
